hid pid controls

--- a/Car_lab/core/templates/control.html
+++ b/Car_lab/core/templates/control.html
@@ -507,7 +507,7 @@
                     </div>
                 </div>
                 
-                <div class="control-group">
+                <!-- <div class="control-group">
                     <label>PID Parameters:</label>
                     <div class="pid-controls">
                         <div class="pid-input">
@@ -526,7 +526,7 @@
                                    onchange="updatePIDParameters()">
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             
             <!-- Robot Status -->
